--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-geolocation-api": "^0.1.21",
     "vue-router": "^4.0.3",
     "vue2-google-maps": "^0.10.7"
   },
