--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.14.2",
     "@vueuse/core": "^8.4.2",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-geolocation-api": "^0.1.21",
     "vue-router": "^4.0.3",
-    "vue2-google-maps": "^0.10.7"
+    "vue2-google-maps": "^0.10.7",
+    "vue3-gmap-custom-marker": "0.0.2",
+    "vue3-google-map": "^0.11.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
